external-crates/move/crates/move-compiler/tests/move_check/expansion/use_spec_schema_as_struct.exp
warning[W00001]: DEPRECATED. will be removed
  ┌─ tests/move_check/expansion/use_spec_schema_as_struct.move:3:5
  │  
3 │ ╭     spec schema Foo<T> {
4 │ │         ensures true;
5 │ │     }
  │ ╰─────^ Specification blocks are deprecated

error[E03003]: unbound module member
   ┌─ tests/move_check/expansion/use_spec_schema_as_struct.move:10:14
   │
10 │     fun t(): Foo<u64> {
   │              ^^^ Invalid module access. Unbound struct 'Foo' in module '0x2::X'

